refactor:Separate window related functions

--- a/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj
+++ b/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj
@@ -129,10 +129,12 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MonitorUtils.cpp" />
+    <ClCompile Include="WindowManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="definition.h" />
     <ClInclude Include="MonitorUtils.h" />
+    <ClInclude Include="WindowManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
