--- a/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj
+++ b/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj
@@ -134,14 +134,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Config.cpp" />
     <ClCompile Include="HotkeyManager.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MonitorUtils.cpp" />
     <ClCompile Include="WindowActions.cpp" />
     <ClCompile Include="WindowManager.cpp" />
     <ClCompile Include="WindowSizeManager.cpp" />
+    <ClCompile Include="ConfigReader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ConfigReader.h" />
     <ClInclude Include="definition.h" />
     <ClInclude Include="HotkeyManager.h" />
     <ClInclude Include="MonitorUtils.h" />
