feat: Add default config text

--- a/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj.filters
+++ b/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClInclude Include="ConfigReader.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="Config.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="VimHotkeyWindowManager.rc">
