--- a/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj
+++ b/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="ConfigReader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Config.h" />
     <ClInclude Include="ConfigReader.h" />
     <ClInclude Include="definition.h" />
     <ClInclude Include="HotkeyManager.h" />
