--- a/Utils Test/Utils Test.vcxproj
+++ b/Utils Test/Utils Test.vcxproj
@@ -106,6 +106,7 @@
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ConfigTest.cpp" />
     <ClCompile Include="GetVkCodeTests.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
