--- a/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj
+++ b/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj
@@ -136,8 +136,10 @@
   <ItemGroup>
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="HotkeyManager.cpp" />
+    <ClCompile Include="KeyUtils.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MonitorUtils.cpp" />
+    <ClCompile Include="Utils.cpp" />
     <ClCompile Include="WindowActions.cpp" />
     <ClCompile Include="WindowManager.cpp" />
     <ClCompile Include="WindowSizeManager.cpp" />
@@ -148,8 +150,10 @@
     <ClInclude Include="ConfigReader.h" />
     <ClInclude Include="definition.h" />
     <ClInclude Include="HotkeyManager.h" />
+    <ClInclude Include="KeyUtils.h" />
     <ClInclude Include="MonitorUtils.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Utils.h" />
     <ClInclude Include="WindowActions.h" />
     <ClInclude Include="WindowManager.h" />
     <ClInclude Include="WindowSizeManager.h" />
