feat: Implement MonitorList

--- a/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj
+++ b/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MonitorUtils.cpp" />
     <ClCompile Include="Utils.cpp" />
+    <ClCompile Include="window.cpp" />
     <ClCompile Include="WindowActions.cpp" />
     <ClCompile Include="WindowManager.cpp" />
     <ClCompile Include="ConfigReader.cpp" />
@@ -153,6 +154,7 @@
     <ClInclude Include="MonitorUtils.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Utils.h" />
+    <ClInclude Include="window.h" />
     <ClInclude Include="WindowActions.h" />
     <ClInclude Include="WindowManager.h" />
   </ItemGroup>
