--- a/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj.filters
+++ b/VimHotkeyWindowManager/VimHotkeyWindowManager.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Utils.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="window.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="definition.h">
@@ -73,6 +76,9 @@
     </ClInclude>
     <ClInclude Include="Utils.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="window.h">
+      <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
