--- a/UnitTests/Utils Test.vcxproj
+++ b/UnitTests/Utils Test.vcxproj
@@ -109,6 +109,7 @@
     <ClCompile Include="ConfigReaderTest.cpp" />
     <ClCompile Include="ConfigTest.cpp" />
     <ClCompile Include="GetVkCodeTests.cpp" />
+    <ClCompile Include="MonitorTest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
